--- a/site.conf
+++ b/site.conf
@@ -1,3 +1,2 @@
 max_posts: 11
-listing_format: <a href="posts/<!--title-nospaces-->.html"><!--title--></a> <em>by</em> <!--author--> <em>on</em> <!--date-->
-default_author: Skairipa
+listing_format: <a href="posts/<!--title-nospaces-->.html"><!--title--></a> <em>on</em> <!--date-->
