--- a/site.conf
+++ b/site.conf
@@ -1,2 +1,2 @@
 max_posts: 11
-listing_format: <a href="posts/<!--title-nospaces-->.html"><!--title--></a> <em>on</em> <!--date-->
+listing_format: <a href="posts/<!--title-nospaces-->.html"><!--title--></a> <!--date-->
